Corrected file paths for images and CSS files.

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ray's Cougar Cafe</title>
-    <link rel = "stylesheet" href = "Home.css">
+    <link rel = "stylesheet" href = "../CSS/Home.css">
 </head>
 <body>
     <div class="beg">
         <nav class ="bar">
-            <img class = "logo" src = "My Logo.jpg">
+            <img class = "logo" src = "../Images/My Logo.jpg">
             <ul>
-                <li><a class = 'active' href ="Project.html">Home</a></li>
+                <li><a class = 'active' href ="Home.html">Home</a></li>
                 <li><a href ="Menu.html">Menu</a></li>
                 <li><a href ="About.html">About</a></li>
                 <li><a class = 'con'href ="Contact.html">Contact</a></li>
@@ -33,7 +33,7 @@
             </div>
             <div class = "figure-container">
                 <figure>
-                    <img class = 'image'src ="Menu photo/Breakfest plate delxue with Coffee.jpg" width =  '300pt'>
+                    <img class = 'image'src ="../Images/Menu photo/Breakfest plate delxue with Coffee.jpg" width =  '300pt'>
                     <div class = "text-container">
                            <figcaption class = "caption">Breakfast platter delxue</figcaption-1>
                             <figcaption class ="price">$8</figcaption>
@@ -41,7 +41,7 @@
                     </div>                    
                 </figure>
                 <figure>
-                    <img class = 'image' src ="Menu photo/Breakfast Burrito.jpg" width= '300pt'>
+                    <img class = 'image' src ="../Images/Menu photo/Breakfast Burrito.jpg" width= '300pt'>
                     <div class = "text-container">
                             <figcaption class = "caption">Breakfast Burrito</figcaption-1>
                             <figcaption class ="price">$3</figcaption>
@@ -49,7 +49,7 @@
                     </div>                    
                 </figure>
                 <figure>
-                    <img class = 'image' src ="Menu photo/Breakfest plate with coffee.jpg" width ='300pt' height="180pt">
+                    <img class = 'image' src ="../Images/Menu photo/Breakfest plate with coffee.jpg" width ='300pt' height="180pt">
                     <div class = "text-container">
                             <figcaption class = "caption">Breakfast plate</figcaption-1>
                             <figcaption class ="price">$4</figcaption>
@@ -57,7 +57,7 @@
                     </div>                    
                 </figure>
                 <figure>
-                    <img class = 'image' src ='Menu photo/Pancake plate.jpg' width ='300' height ='140'>
+                    <img class = 'image' src ='../Images/Menu photo/Pancake plate.jpg' width ='300' height ='140'>
                     <div class = "text-container">
                             <figcaption class = "caption">Pancake Combo</figcaption-1>
                             <figcaption class ="price">$5</figcaption>
@@ -65,7 +65,7 @@
                     </div>                    
                 </figure> 
                 <figure>
-                    <img class ='image' src ="Menu photo/Egg platter.jpg" width ='300' height ='110'>
+                    <img class ='image' src ="../Images/Menu photo/Egg platter.jpg" width ='300' height ='110'>
                     <div class = "text-container">
                             <figcaption class = "caption">Egg platter</figcaption-1>
                             <figcaption class ="price">$5</figcaption>
@@ -73,7 +73,7 @@
                     </div>                    
                 </figure> 
                 <figure>
-                    <img class ='image' src ="Menu photo/Breakfest sandwitches.jpg" width ='300' height ='110'>
+                    <img class ='image' src ="../Images/Menu photo/Breakfest sandwitches.jpg" width ='300' height ='110'>
                     <div class = "text-container">
                             <figcaption class = "caption">Two Breakfast Sandwitches</figcaption-1>
                             <figcaption class ="price">$4</figcaption>
