--- a/HTML/About.html
+++ b/HTML/About.html
@@ -11,7 +11,7 @@
         <nav class ="bar">
             <img class = "logo" src = "../Images/My Logo.jpg">
             <ul>
-                <li><a href ="Project.html">Home</a></li>
+                <li><a href ="Home.html">Home</a></li>
                 <li><a href ="Menu.html">Menu</a></li>
                 <li><a class = 'active' href ="About.html">About</a></li>
                 <li><a class = 'con'href ="Contact.html">Contact</a></li>
