--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -88,7 +88,7 @@
     </div>
     <div>
         <h5>Notes for Vegeterains:</h5>
-        <p> The items you see above is not the full menu. While many of our menu items contain or made with meat. We are Vegeterain freindaly any item on our menu may be ordered without meat upon request. We also offer halal meat options as well when you place your order simply inform your server if you would like to subsutute regular meat for halal meat instead.</p>
+        <p> The items you see above is not the full menu. While many of our menu items contain or made with meat. We are Vegetarian friendly any item on our menu may be ordered without meat upon request. We also offer halal meat options as well when you place your order simply inform your server if you would like to subsutute regular meat for halal meat instead.</p>
     </div>
     <footer>
         <p1>&copy 2024 Ray's Coug Cafe. All rights reserved. <br></p1>
