Updated h2 in on Homepage

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -20,7 +20,7 @@
         </nav>
         <div class = "center">
             <h1>Welcome to Ray's Cougar Cafe!</h1>
-            <h2> Our dishes are made with love. We are excited to serve hungry students our delicous meals</h2>
+            <h2> We only use the best quailty ingrdients to prepare our food. We are excited to serve UH students</h2>
             <div class ='btns'>
                 <button><a href ="About.html">Order Now</a></button>
                 <button><a href ="Rewards.html">Join our rewards program</a></button>
