--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -14,7 +14,7 @@
                 <li><a class = 'active' href ="Home.html">Home</a></li>
                 <li><a href ="Menu.html">Menu</a></li>
                 <li><a href ="About.html">About</a></li>
-                <li><a class = 'con'href ="Contact.html">Contact</a></li>
+                <li><a href ="Contact.html">Contact</a></li>
             </ul>
 
         </nav>
