Modified Contact page and added menu page

--- a/HTML/Contact.html
+++ b/HTML/Contact.html
@@ -16,6 +16,8 @@
                 <li><a href ="About.html">About</a></li>
                 <li><a class = 'active' href ="Contact.html">Contact</a></li>
             </ul>
+            <h1>Contact Us!</h1>
+            <p class = para>Please fill out the form below to contact us or contact us by phone, or email listed below. Please allow 24hrs for a represenetive to respond to your inquiry.</p>
     <div class="container">
       <span class="big-circle"></span>
       <img src="../Images/shape.png" class="square" alt="" />
@@ -23,7 +25,7 @@
         <div class="contact-info">
           <h3 class="title">Let's get in touch</h3>
           <p class="text">
-            We aim to provide the best experince possible.
+            We aim to provide the best experience possible.
             We are sorry if you had a terrible experience please
             fill out the form or email, call, and we will assist you as soon as possible.
           </p>
