--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -22,7 +22,7 @@
             <h1>Welcome to Ray's Cougar Cafe!</h1>
             <h2> We only use the best quailty ingrdients to prepare our food. We are excited to serve UH students</h2>
             <div class ='btns'>
-                <button><a href ="About.html">Order Now</a></button>
+                <button><a href ="Menu.html">Order Now</a></button>
                 <button><a href ="Rewards.html">Join our rewards program</a></button>
             </div>
             <div class = "main">
