--- a/HTML/About.html
+++ b/HTML/About.html
@@ -39,6 +39,18 @@
     <section>
         <p3> As time went on Ray's dishes contuined to get very popular. He wants people to contuine to enjoy his food. He still contuines to cook at home and is always learning new culinary techiques from his mom. Ray also contuines to explore the dishes he can make with any fresh ingrdients that he has on him.</p3>
     </section>
+    <section>
+        <h3>Mission Statment</h3>
+        <p4>From the start our mission is always provide students with fresh delicous and afforable meals. It is important to us that our students are well fed and grateful. We value feeback from all of our diners and we want to do what we can to bulid postive bonds with our students. We consider it an honor and a privlage to serve universtay students. We know students work very hard and they deserve a delicous meal. </p4>
+    </section>
+    <section>
+        <h4>What we do</h4>
+        <p5> We provide students with afforable delicous food. We use only fresh ingridents to prepare high quailty dishes. We want students to be well fed and we want the students to eat high quailty meals. Which is why our primary focues is serving high quailty meals to our hungry students. </p5>
+    </section>
+    <section>
+        <h5>Our Story</h5>
+        <p6> Our story began when our founder and head chef Ray open this restruant up. He grew up learing and inhearting culinary skills he learned from his mother as he grew older he focues on his solo career as a cook. When Ray was in collage he noticed students were eating poor quailty food that was very overpriced. Upon learning this Ray opened his own restruent in UH Sugarland becuase he beleived students deserved high quality food at afforable prices. Ever since we opened our resturant has gained lots of popularty among students and has become a go to place for many of the students. </p6>
+    </section>
     <footer>
         <p1>&copy 2024 Ray's Coug Cafe. All rights reserved. <br></p1>
         <p2> The "Ray's Coug Cafe" logo is a trademark of Ray's Coug Cafe.</p2>
